[gd_scene load_steps=2 format=3 uid="uid://b3nmw8qxuv7cp"]

[ext_resource type="Script" path="res://scripts/Territory.gd" id="1_territory"]

[node name="Territory" type="Node2D"]
script = ExtResource("1_territory")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 120.0
offset_bottom = 80.0
color = Color(0.5, 0.5, 0.5, 1)

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]

[node name="NameLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 5.0
offset_right = 115.0
offset_bottom = 25.0
text = "Territory"
autowrap_mode = 3

[node name="ArmyLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 30.0
offset_right = 115.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1

[node name="OwnerLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 55.0
offset_right = 115.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 10
text = "Owner"
horizontal_alignment = 1
